feat: adding validations
